fix: image overflow

--- a/client/src/common.css
+++ b/client/src/common.css
@@ -29,6 +29,10 @@ button:hover {
 	margin-bottom: 10px;
 }
 
+img {
+	max-width: 100%;
+}
+
 hr {
 	border: none;
 	border-top: 0.5px solid #ccc;
